--- a/about.html
+++ b/about.html
@@ -1,32 +1,28 @@
 <!DOCTYPE html>
-<page2>
+<html>
 
-    <body>
-        <link rel="stylesheet" type="text/css" href="styles.css">
-        <header>
-            <h1>Meer over mij</h1>
-        </header>
-        <main>
-            <hr>
-            <h2>Dit doe ik in mijn vrije tijd</h2>
-            <nav>
-                <p>Ik lees en wandel graag. Fietsen vind ik ook leuk.</p>
-            </nav>
-            </hr>
-
-
-            <img width="200" height="250" src="xandrafoto.jpeg">
+<body>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <header>
+        <h1>Meer over mij</h1>
+    </header>
+    <main>
+        <hr>
+        <h2>Dit doe ik in mijn vrije tijd</h2>
+        </hr>
+        <nav>
+            <p>Ik lees en wandel graag. Fietsen vind ik ook leuk.</p>
+        </nav>
 
 
-        </main>
+        <img width="200" height="250" src="xandrafoto.jpeg">
 
-        <space></space>
 
-        <space></space>
-        <p>Hier vindt je <a href="page3.html">ideeën </a>tijdens een lockdown.</p>
-        <footer>
-            <p>Dit hier is mijn eerste website. Zo kom je weer op de <a href=index.html> homepage</a> van mij. </p>
-        </footer>
-    </body>
+        <p>Hier vindt je <a href="page3.html">ideeën</a> tijdens een lockdown.</p>
+    </main>
+    <footer>
+        <p>Dit hier is mijn eerste website. Zo kom je weer op de <a href="index.html">homepage</a> van mij. </p>
+    </footer>
+</body>
 
-    </html>
+</html>
