--- a/page3.html
+++ b/page3.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 
 <body>
@@ -5,30 +6,24 @@
     <header>
         <h1>Ideeën tijdens een lockdown</h1>
     </header>
+    <hr>
     <h2>...en niet alleen dan</h2>
+    </hr>
     <main>
-        <hr>
-        </hr>
         <h3>Een taart bakken</h3>
+
         <p>Zeker heb je een mooi receptenboek, en zo niet, helpt het internet verder. Als je minder goed geoefend bent, helpt het, dat trefwoord beginner bij de zoektocht bij te zetten. Er zijn simpele chocoladecakes en -taarten, lekker citroen-of andere
             fruittaarten. En ook voor slagroomliefhebbers zijn er talloze recepten. Zoek een recept, ga boodschappen doen volgens lijstje en begin met het bakken volgens recept. Veel succes!</p>
         <img width=" " height="250" src="cake-1971552_1920.jpg">
-        <space></space>
-        <h3>Een goed boek lezen</h3>
-        <p>Voor iedereen is iets anders een goed boek. Als je helemaal geen idee hebt wat je leuk lijkt, kun je bijvoorbeeld in de zaterdagsbijlage over boeken van de Volkskrant lezen. Welke nieuwe boeken over welk onderwerp zijn intersssant? Door het lezen
-            van de recencies kom je er achter. Of: je gaat na de plaatselijke boekenwinkel. Meestal zijn boekhandelaren heel goed belezen en helpen je verder. En jouw eigen vrienden en kennissen komen ook vaak met een goede tip!</p>
-        <img width=" " height="250" src="library-849797_1920.jpg">
-        <space></space>
-
-        <h3>Een leuke wandeling maken</h3>
-        <p>Het maakt niets uit waar je woont, er zijn altijd mooie routes in de buurt. Sommige wonen aan de zee of aan de rivier om te wandelen. Anderen hebben bossen of heide in de omgeving. En als dit bij jouw anders ligt, kun je misschien naar een heuvel,
-            een kasteel of slot lopen. Minst een park heeft iedere stad in Nederland.
-
-        </p><img width=" " height="250" src="trees-5691803_1920.jpg">
-        <space></space>
+        <p>Nog meer ideeën? Een goed
+            <a href="page4.html"> boek lezen?</a>
+        </p>
     </main>
-    <footer>
-        <p>Zo kom je weer op de <a href=index.html> homepage</a> van mij. </p>
-    </footer>
+</body>
+
+<footer>
+    <p>Zo kom je weer op de
+        <a href="index.html">homepage</a> van mij.</p>
+</footer>
 
 </html>
