--- a/index.html
+++ b/index.html
@@ -1,33 +1,37 @@
 <!DOCTYPE html>
+<html>
 <header>
 
     <head>
         <title>
             <h1>Eerste website</h1>
+            <meta>oefening, opdracht, WincAcademy, Xandra</meta>
         </title>
     </head>
 </header>
 
 <body>
-
     <link rel="stylesheet" type="text/css" href="styles.css">
     <h1>Eerste website in HTML van Xandra</h1>
     <main>
-        <space>
-        </space>
         <hr>
         <h2>Leuke dingen doen!</h2>
+        </hr>
         <p>
-            Hier vind je verschillende <a href="page3.html">ideeën </a> voor een lockdown
+            Hier vindt je verschillende ideeën voor een lockdown.
             <ul>
-                <li>taart bakken</li>
-                <li>boek lezen</li>
-                <li>lange wandeling maken</li>
-                <space></space>
-    </main>
-    </ul>
-    </hr>
-    <p><a href="about.html">Meer over mij</a></p>
+                <li>
+                    <a href="page3.html"> taart bakken</a>
+                </li>
+                <li>
+                    <a href="page4.html"> boek lezen</a>
+                </li>
+                <li>
+                    <a href="page5.html"> lange wandeling maken</a>
+                </li>
+            </ul>
+        </p>
+        <p><a href="about.html">Meer over mij</a></p>
     </main>
 
     <footer>
