--- a/about.html
+++ b/about.html
@@ -5,23 +5,21 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
     <header>
         <h1>Meer over mij</h1>
-    </header>
-    <main>
         <hr>
+    </header>
+
+    <main>
+
+
         <h2>Dit doe ik in mijn vrije tijd</h2>
-        </hr>
         <nav>
             <p>Ik lees en wandel graag. Fietsen vind ik ook leuk.</p>
         </nav>
-
-
-        <img width="200" height="250" src="xandrafoto.jpeg">
-
-
-        <p>Hier vindt je <a href="page3.html">ideeën</a> tijdens een lockdown.</p>
+        <img id="portrait" src="xandrafoto.jpeg " width="200px" height="250px">
+        <p>Hier vindt je <a href="page3.html ">ideeën</a> tijdens een lockdown.</p>
     </main>
     <footer>
-        <p>Dit hier is mijn eerste website. Zo kom je weer op de <a href="index.html">homepage</a> van mij. </p>
+        <p>Dit hier is mijn eerste website. Zo kom je weer op de <a href="index.html ">homepage</a> van mij. </p>
     </footer>
 </body>
 
