--- a/index.html
+++ b/index.html
@@ -1,24 +1,21 @@
 <!DOCTYPE html>
 <html>
 <header>
-
-    <head>
-        <title>
-            <h1>Eerste website</h1>
-            <meta>oefening, opdracht, WincAcademy, Xandra</meta>
-        </title>
-    </head>
+    <title>
+        <h1>Eerste website
+            <tag>oefening,opdracht,WincAcademy,Xandra</tag>
+        </h1>
+    </title>
 </header>
 
 <body>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <h1>Eerste website in HTML van Xandra</h1>
     <main>
-        <hr>
         <h2>Leuke dingen doen!</h2>
-        </hr>
         <p>
             Hier vindt je verschillende ideeën voor een lockdown.
+
             <ul>
                 <li>
                     <a href="page3.html"> taart bakken</a>
