--- a/page3.html
+++ b/page3.html
@@ -8,13 +8,13 @@
     </header>
     <hr>
     <h2>...en niet alleen dan</h2>
-    </hr>
     <main>
         <h3>Een taart bakken</h3>
 
         <p>Zeker heb je een mooi receptenboek, en zo niet, helpt het internet verder. Als je minder goed geoefend bent, helpt het, dat trefwoord beginner bij de zoektocht bij te zetten. Er zijn simpele chocoladecakes en -taarten, lekker citroen-of andere
             fruittaarten. En ook voor slagroomliefhebbers zijn er talloze recepten. Zoek een recept, ga boodschappen doen volgens lijstje en begin met het bakken volgens recept. Veel succes!</p>
-        <img width=" " height="250" src="cake-1971552_1920.jpg">
+        <div class="img"><img width=" " height="250px" src="cake-1971552_1920.jpg">
+        </div>
         <p>Nog meer ideeën? Een goed
             <a href="page4.html"> boek lezen?</a>
         </p>
