--- a/page5.html
+++ b/page5.html
@@ -9,14 +9,15 @@
     </header>
     <hr>
     <h2>...en niet alleen dan</h2>
-    </hr>
     <main>
         <h3>Een leuke wandeling maken</h3>
 
         <p>Het maakt niets uit waar je woont, er zijn altijd mooie routes in de buurt. Sommige wonen aan de zee of aan de rivier om te wandelen. Anderen hebben bossen of heide in de omgeving. En als dit bij jouw anders ligt, kun je misschien naar een heuvel,
             een kasteel of slot lopen. Minst een park heeft iedere stad in Nederland.
 
-        </p><img width=" " height="250" src="trees-5691803_1920.jpg">
+        </p>
+        <div class="img"><img width=" " height="250px" src="trees-5691803_1920.jpg">
+        </div>
         <p>Nog meer ideeën? Een lekkere
             <a href="page3.html"> taart bakken?</a></p>
     </main>
